--- a/CHAMP_Project/sources/IP_FIFO_24/IP_FIFO_24.cmp
+++ b/CHAMP_Project/sources/IP_FIFO_24/IP_FIFO_24.cmp
@@ -22,6 +22,7 @@ component IP_FIFO_24
 		wrreq		: IN STD_LOGIC ;
 		empty		: OUT STD_LOGIC ;
 		full		: OUT STD_LOGIC ;
-		q		: OUT STD_LOGIC_VECTOR (23 DOWNTO 0)
+		q		: OUT STD_LOGIC_VECTOR (23 DOWNTO 0);
+		usedw		: OUT STD_LOGIC_VECTOR (9 DOWNTO 0)
 	);
 end component;
